--- a/services.html
+++ b/services.html
@@ -515,7 +515,7 @@
       <div class="services-grid">
         <div class="service-card">
           <div class="service-icon">✓</div>
-          <h3>Basic Care Plan</h3>
+          <h3>Essential Care Plan</h3>
           <p>Perfect for seniors who want their computer to just work without any hassle.</p>
           <ul class="service-features">
             <li>Monthly remote health check</li>
@@ -523,40 +523,42 @@
             <li>Virus protection & removal</li>
             <li>Email & phone support</li>
             <li>Simple troubleshooting help</li>
+            <li>Basic performance optimization</li>
           </ul>
-          <div class="service-price">$50/month</div>
-          <a href="contact.html" class="btn-service">Choose Basic Plan</a>
+          <div class="service-price">$99/month</div>
+          <a href="contact.html" class="btn-service">Choose Essential Plan</a>
         </div>
 
         <div class="service-card">
           <div class="service-icon">★</div>
           <h3>Premium Care Plan</h3>
-          <p>Complete peace of mind with priority support and additional services.</p>
+          <p>Complete peace of mind with priority support and comprehensive services.</p>
           <ul class="service-features">
-            <li>Everything in Basic Plan</li>
-            <li>Priority phone support</li>
-            <li>Quarterly tune-up visits</li>
-            <li>Data backup assistance</li>
-            <li>New software setup</li>
+            <li>Everything in Essential Plan</li>
+            <li>Priority phone support (same-day response)</li>
+            <li>Monthly tune-up visits</li>
+            <li>Automated data backup setup</li>
+            <li>Software installation & training</li>
             <li>Hardware upgrade consultation</li>
+            <li>Device setup assistance</li>
           </ul>
-          <div class="service-price">$89/month</div>
+          <div class="service-price">$149/month</div>
           <a href="contact.html" class="btn-service">Choose Premium Plan</a>
         </div>
 
         <div class="service-card">
           <div class="service-icon">PC</div>
           <h3>One-Time Services</h3>
-          <p>Individual services when you need them most.</p>
+          <p>Individual services when you need them most, with expert care.</p>
           <ul class="service-features">
-            <li>Computer cleanup & speedup</li>
-            <li>Virus removal</li>
-            <li>Software installation</li>
-            <li>Data recovery</li>
-            <li>Hardware repairs</li>
-            <li>Basic training sessions</li>
+            <li>Complete computer cleanup & speedup</li>
+            <li>Virus removal & security hardening</li>
+            <li>Software installation & setup</li>
+            <li>Data recovery & transfer</li>
+            <li>Hardware repairs & upgrades</li>
+            <li>Personal training sessions</li>
           </ul>
-          <div class="service-price">$75-$150</div>
+          <div class="service-price">$125-$225</div>
           <a href="contact.html" class="btn-outline">Get Quote</a>
         </div>
       </div>
@@ -574,45 +576,48 @@
         <div class="service-card">
           <div class="service-icon">⚡</div>
           <h3>Performance Optimization</h3>
-          <p>Squeeze every bit of performance from your current gaming setup.</p>
+          <p>Squeeze every bit of performance from your current gaming setup with professional tuning.</p>
           <ul class="service-features">
-            <li>Professional overclocking</li>
-            <li>Thermal optimization</li>
-            <li>Driver updates & optimization</li>
-            <li>Game-specific settings tuning</li>
-            <li>Benchmark testing</li>
+            <li>Professional overclocking (CPU & GPU)</li>
+            <li>Advanced thermal optimization</li>
+            <li>Driver updates & game optimization</li>
+            <li>Custom game-specific settings</li>
+            <li>Comprehensive benchmark testing</li>
+            <li>Performance monitoring setup</li>
           </ul>
-          <div class="service-price">$150-$300</div>
+          <div class="service-price">$225-$375</div>
           <a href="contact.html" class="btn-service">Boost Performance</a>
         </div>
 
         <div class="service-card">
           <div class="service-icon">PC</div>
           <h3>Custom Gaming Builds</h3>
-          <p>Hand-built gaming PCs tailored to your budget and performance needs.</p>
+          <p>Hand-built gaming PCs tailored to your budget and performance requirements.</p>
           <ul class="service-features">
-            <li>Personalized component selection</li>
-            <li>Professional assembly</li>
-            <li>Stress testing & optimization</li>
-            <li>1-year warranty on labor</li>
-            <li>Free performance tweaking</li>
+            <li>Personalized component consultation</li>
+            <li>Professional assembly & cable management</li>
+            <li>48-hour stress testing & optimization</li>
+            <li>2-year warranty on assembly labor</li>
+            <li>Free performance tweaking sessions</li>
+            <li>Game library optimization</li>
           </ul>
-          <div class="service-price">$200 + parts</div>
+          <div class="service-price">$299 + parts</div>
           <a href="contact.html" class="btn-service">Build My PC</a>
         </div>
 
         <div class="service-card">
           <div class="service-icon">↗</div>
           <h3>Gaming Upgrades</h3>
-          <p>Strategic upgrades to boost your FPS and gaming experience.</p>
+          <p>Strategic upgrades to dramatically boost your FPS and gaming experience.</p>
           <ul class="service-features">
-            <li>GPU upgrade consultation</li>
-            <li>RAM & storage upgrades</li>
-            <li>Cooling system improvements</li>
-            <li>Power supply upgrades</li>
-            <li>Performance testing</li>
+            <li>GPU upgrade consultation & installation</li>
+            <li>RAM & NVMe storage upgrades</li>
+            <li>Custom cooling system improvements</li>
+            <li>Power supply upgrades & testing</li>
+            <li>Comprehensive performance testing</li>
+            <li>Game settings optimization</li>
           </ul>
-          <div class="service-price">$100 + parts</div>
+          <div class="service-price">$175 + parts</div>
           <a href="contact.html" class="btn-outline">Upgrade Now</a>
         </div>
       </div>
@@ -623,8 +628,8 @@
   <section class="emergency-banner">
     <div class="emergency-banner-container">
       <h2>Emergency Computer Repair</h2>
-      <p>Computer crashed? Virus attack? We offer same-day emergency service to get you back up and running.</p>
-      <a href="contact.html" class="btn-emergency">Get Emergency Help</a>
+      <p>Computer crashed? Virus attack? We offer same-day emergency service to get you back up and running fast.</p>
+      <a href="contact.html" class="btn-emergency">Get Emergency Help - $199</a>
     </div>
   </section>
 
