--- a/contact.html
+++ b/contact.html
@@ -769,7 +769,7 @@
                   <p>We'll get back to you within 2 hours!</p>
                 </div>
 
-                <form class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1700838/forms/161378854482478381/subscribe" data-code="" method="post" target="_blank">
+                <form class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1700838/forms/161378854482478381/subscribe" data-code="" method="post">
                   <div class="ml-form-formContent">
                     <div class="ml-form-fieldRow">
                       <div class="ml-field-group ml-field-email ml-validate-email ml-validate-required">
@@ -871,7 +871,7 @@
                     <p>Tell us about your computer needs and we'll provide a customized solution within 2 hours.</p>
                   </div>
 
-                  <form class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1700838/forms/161378854482478381/subscribe" data-code="" method="post" target="_blank">
+                  <form class="ml-block-form" action="https://assets.mailerlite.com/jsonp/1700838/forms/161378854482478381/subscribe" data-code="" method="post">
                     <div class="ml-form-formContent">
                       <div class="ml-form-fieldRow">
                         <div class="ml-field-group ml-field-email ml-validate-email ml-validate-required">
