--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <meta name="google-site-verification" content="OfO2Upj456IB-8HJ6Kesm1Xuq0OCY6vFtReDEvcQfuo" />
   <title>getITfixed | Tech Help You Can Trust | Computer Repair & Support</title>
   
   <!-- Favicon Links -->
