--- a/index.html
+++ b/index.html
@@ -4,13 +4,32 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <meta name="google-site-verification" content="mV_hmOlMxud6uKk7PFxBk9tVP3jaKD1wtpQQyV4qt5M" />
+  
+  <!-- CANONICAL TAG - REPLACE WITH YOUR ACTUAL DOMAIN -->
+  <link rel="canonical" href="https://yourdomain.com/" />
+  
+  <!-- ADDITIONAL SEO FIXES -->
+  <meta name="robots" content="index, follow, max-snippet:-1, max-image-preview:large, max-video-preview:-1" />
+  
+  <!-- Open Graph Tags -->
+  <meta property="og:locale" content="en_US" />
+  <meta property="og:type" content="website" />
+  <meta property="og:title" content="getITfixed | Computer Repair Phoenix AZ | Laptop Repair | PC Repair Services | Tech Support" />
+  <meta property="og:description" content="Professional computer repair services in Phoenix, Arizona. Expert laptop repair, desktop PC repair, virus removal, data recovery, and tech support. Same-day service available. Call (623) 738-5630" />
+  <meta property="og:url" content="https://yourdomain.com/" />
+  <meta property="og:site_name" content="getITfixed" />
+  
+  <!-- Twitter Card Tags -->
+  <meta name="twitter:card" content="summary_large_image" />
+  <meta name="twitter:title" content="getITfixed | Computer Repair Phoenix AZ | Laptop Repair | PC Repair Services | Tech Support" />
+  <meta name="twitter:description" content="Professional computer repair services in Phoenix, Arizona. Expert laptop repair, desktop PC repair, virus removal, data recovery, and tech support. Same-day service available. Call (623) 738-5630" />
+  
   <title>getITfixed | Computer Repair Phoenix AZ | Laptop Repair | PC Repair Services | Tech Support</title>
   
   <!-- SEO Meta Tags -->
   <meta name="description" content="Professional computer repair services in Phoenix, Arizona. Expert laptop repair, desktop PC repair, virus removal, data recovery, and tech support. Same-day service available. Call (623) 738-5630">
   <meta name="keywords" content="computer repair Phoenix, laptop repair Arizona, PC repair Phoenix AZ, computer technician, virus removal, data recovery, hard drive replacement, screen repair, computer maintenance, tech support Phoenix, desktop repair, gaming PC repair, computer upgrade, SSD installation, memory upgrade, motherboard repair, power supply repair, computer diagnostic, malware removal, computer optimization, IT support Phoenix, computer service Phoenix, broken computer repair, slow computer fix, computer won't start, blue screen repair, hardware repair, software repair, computer troubleshooting, emergency computer repair, affordable computer repair, reliable PC repair, professional computer service">
   <meta name="author" content="getITfixed">
-  <meta name="robots" content="index, follow">
   <meta name="geo.region" content="US-AZ">
   <meta name="geo.placename" content="Phoenix, Arizona">
   <meta name="geo.position" content="33.4484;-112.0740">
@@ -1018,7 +1037,7 @@
         getITfixed
       </div>
       <ul class="nav-links">
-        <li><a href="index.html" class="active">Home</a></li>
+        <li><a href="#" class="active">Home</a></li>
         <li><a href="services.html">Services</a></li>
         <li><a href="reviews.html">Testimonials</a></li>
         <li><a href="contact.html">Contact</a></li>
@@ -1329,7 +1348,7 @@
         <div class="footer-section">
           <h3>Quick Links</h3>
           <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="#">Home</a></li>
             <li><a href="services.html">Services</a></li>
             <li><a href="reviews.html">Testimonials</a></li>
             <li><a href="contact.html">Contact</a></li>
