--- a/index.html
+++ b/index.html
@@ -1404,7 +1404,7 @@
       <ul class="nav-links">
         <li><a href="#" class="active">Home</a></li>
         <li><a href="services.html">Services</a></li>
-        <li><a href="network-cleanup.html">Network Cleanup</a></li>
+        <li><a href="Cable-Management.html">Cable Management</a></li>
         <li><a href="reviews.html">Testimonials</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
