--- a/contact.html
+++ b/contact.html
@@ -734,6 +734,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="cable-management.html">Cable Management</a></li>
         <li><a href="reviews.html">Testimonials</a></li>
         <li><a href="contact.html" class="active">Contact</a></li>
       </ul>
