--- a/services.html
+++ b/services.html
@@ -482,6 +482,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html" class="active">Services</a></li>
+        <li><a href="cable-management.html">Cable Management</a></li>
         <li><a href="reviews.html">Testimonials</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
