--- a/reviews.html
+++ b/reviews.html
@@ -101,6 +101,7 @@
       <ul class="nav-links">
         <li><a href="index.html">Home</a></li>
         <li><a href="services.html">Services</a></li>
+        <li><a href="cable-management.html">Cable Management</a></li>
         <li><a href="reviews.html" class="active">Testimonials</a></li>
         <li><a href="contact.html">Contact</a></li>
       </ul>
